pan, erase